--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+    overflow: hidden;
+    width: 100%;
+    position: fixed;
+}
